@@ -1,3 +1,7 @@
+2016-02-08  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Corrections in the lhapdf manager script for Python3 compatibility. Thanks to Frank Siegert.
+
 2015-12-22  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Version 6.1.6 release!
